# buffer-blaster-

./: .env.example  .gitattributes  .gitignore  AGENTS.md  EMERALD_TABLETS.md  README.md  package.json
.beads/: 0000_init.bead  0001_phases_1_2.bead  0002_phases_3_7.bead  0003_handoff.bead  20260715T202659Z_repository_import_and_graph.bead  20260717T195411Z_production_import.bead  20260717_production_gates.bead  20260718_supabase_repository_slice.bead  20260720_fix_dep_breakage.bead  20260720_grinions_scaffold.bead  20260720_postatees_scripts.bead
.github/: pull_request_template.md
.ralphy/: config.json
api/: __init__.py  app.py  deps.py  main.py  requirements.txt
docs/: BROWSER_AGENT_HANDOFF.md  BUFFER_CREATOR_OS_PLAN.md  BUILT_TO_SELL.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  CLAUDE_CODE_WIRING.md  CONTEXT.md  GAPS.md  HANDOFF.md  POSTATEES_DEPLOY.md  PROJECT.md  PROJECT_GRAPH.md  README.md  SECRETS.md  SELF_DIGESTING_PROMPT.md  SYSTEM_PROMPT.md  TDD_SPEC.md
frontend/: next.config.ts  package-lock.json  package.json
openspec/: project.md
ops/: README.md
rust_core/stavarai_core/: Cargo.toml
rust_core/stavarai_core/src/: auth.rs  encryption.rs  job_queue.rs  lib.rs  rate_limiter.rs
rust_core/stavarai_core/tests/: auth.rs  encryption.rs  job_queue.rs  rate_limiter.rs
scripts/: client_pipeline.ts  deploy-frontend-vercel.sh  deploy-postatees-full.sh  diagnose-collisions.sh  icm_bundle.py  install-tools.sh  print-supabase-key.sh  setup-postatees.sh  sync_airtable.py  vps-recon.sh  youmind_ingest.py
sources/: youmind-openlab.json
tests/: conftest.py  (+1 more)
(+92 files in other folders)
